--- a/QuimicaP3_Tamanduatei.ipynb
+++ b/QuimicaP3_Tamanduatei.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "deadly-target",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "balanced-commercial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "accepted-culture",
    "metadata": {},
    "outputs": [
     {
@@ -419,9 +416,7 @@
        "[2533 rows x 26 columns]"
       ]
      },
-
      "execution_count": 40,
-
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +428,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "chief-journal",
    "metadata": {},
    "outputs": [
     {
@@ -512,8 +506,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "registered-bulgaria",
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +519,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "enclosed-session",
    "metadata": {
     "scrolled": true
    },
@@ -542,7 +533,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "commercial-mercy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,17 +545,12 @@
     "temp = res1[res1[\"Parametro\"] == 'Temperatura da Água']\n",
     "nit_total = res1[res1[\"Parametro\"] == 'Nitrogênio Total']\n",
     "fos_total = res1[res1[\"Parametro\"] == 'Fósforo Total']\n",
-
     "sol_total = res1[res1[\"Parametro\"] == 'Sólido Total']"
-
    ]
   },
   {
    "cell_type": "code",
-
    "execution_count": 45,
-   "id": "better-cloud",
-
    "metadata": {},
    "outputs": [
     {
@@ -616,10 +601,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 46,
-   "id": "running-gateway",
-
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +629,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "statutory-category",
    "metadata": {
     "scrolled": false
    },
@@ -662,7 +643,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "dietary-valuable",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +774,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "collected-springfield",
    "metadata": {
     "scrolled": false
    },
@@ -939,7 +918,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "colonial-presentation",
    "metadata": {
     "scrolled": true
    },
@@ -1084,7 +1062,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "identical-attitude",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1193,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "desirable-assurance",
    "metadata": {
     "scrolled": false
    },
@@ -1246,7 +1222,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "wanted-point",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1491,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "unlikely-joyce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,9 +1519,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculando IQA para ultimo registro (06/10/2020)\n",
+    "#### Fósforo\n",
+    "<img src=\"img/fosforo_2020.png\">\n",
+    "\n",
+    "#### PH\n",
+    "<img src=\"img/ph_2020.png\">\n",
+    "\n",
+    "#### Oxigênio\n",
+    "<img src=\"img/oxigenio_2020.png\">\n",
+    "\n",
+    "#### Turbidez\n",
+    "<img src=\"img/turbidez_2020.png\">\n",
+    "\n",
+    "#### DBO\n",
+    "<img src=\"img/dbo_2020.png\">\n",
+    "\n",
+    "#### temp\n",
+    "<img src=\"img/temperatura_2020.png\">\n",
+    "\n",
+    "#### Nitrogenio (2019)\n",
+    "<img src=\"img/nitrogenio_2019.png\">\n",
+    "\n",
+    "#### Residuos\n",
+    "<img src=\"img/residuo_2020.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.714283096369815\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "fosforo_iqa = 15\n",
+    "ph_iqa =91\n",
+    "o2_iqa = 12\n",
+    "turbidez_iqa = 27\n",
+    "dbo_iqa = 35\n",
+    "temp_iqa = 32\n",
+    "nitrogenio_iqa = 37\n",
+    "residuo_iqa = 50\n",
+    "lista_iqa = [fosforo_iqa,w_fos,ph_iqa,w_pH,o2_iqa,w_O2,turbidez_iqa,w_turb,dbo_iqa,\n",
+    "             w_DBO,temp_iqa,w_temp,nitrogenio_iqa,w_nit,residuo_iqa,w_res_tot]\n",
+    "def calcula_iqa_por_lista(lista_iqa):    \n",
+    "    i = 0\n",
+    "    IQA =1\n",
+    "    while i < len(lista_iqa):\n",
+    "        IQA *= lista_iqa[i]**lista_iqa[i+1]\n",
+    "        i+=2\n",
+    "    return IQA\n",
+    "calcula_iqa_por_lista(lista_iqa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sem nitrogênio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.345350043765926"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "nitrogenio_iqa = 1\n",
+    "lista_iqa = [fosforo_iqa,w_fos,ph_iqa,w_pH,o2_iqa,w_O2,turbidez_iqa,w_turb,dbo_iqa,\n",
+    "             w_DBO,temp_iqa,w_temp,nitrogenio_iqa,1,residuo_iqa,w_res_tot]\n",
+    "def calcula_iqa_por_lista(lista_iqa):    \n",
+    "    i = 0\n",
+    "    IQA =1\n",
+    "    while i < len(lista_iqa):\n",
+    "        IQA *= lista_iqa[i]**lista_iqa[i+1]\n",
+    "        i+=2\n",
+    "    return IQA\n",
+    "calcula_iqa_por_lista(lista_iqa)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "current-brother",
    "metadata": {},
    "outputs": [],
    "source": []
